# fde-book

./: .gitignore  Gemfile  README.md  SUMMARY.md  TRANSLATE_PROMPT.md  _config.yml  bibliography.md  book.toml  build-pdf.sh  cover-philosophy.md  cover.html  generate_cover.py  glossary.md  index.html  index.md  preface.md  reading-guide.md  render_cover.py  wechat-article.md
.github/workflows/: deploy-mdbook.yml  pages.yml
_sass/color_schemes/: openbook.scss
appendix/: appendix-a.md  appendix-b.md  appendix-c.md  appendix-d.md  index.md
demos/ch14-agent/agentcore_project/ch14hesheng/app/ch14_hesheng_agent/: main.py  pyproject.toml
demos/ch14-agent/agentcore_project/ch14hesheng/app/ch14_hesheng_agent/_vendor/ch14_agent/: tools.py
demos/ch14-agent/agentcore_project/ch14hesheng/app/ch14_hesheng_agent/_vendor/ch14_agent/_manuals/: 02-routing-policy.md
demos/ch14-agent/agentcore_project/ch14hesheng/app/ch14_hesheng_agent/_vendor/hesheng_core/: __init__.py  _stack-outputs.json  config.py  ontology.py
en/: README.md  bibliography.md  glossary.md  preface.md  reading-guide.md
part-1/: chapter-01.md  chapter-02.md  chapter-03.md  intro.md
part-2/: chapter-04.md  chapter-05.md  intro.md
part-3/: chapter-06.md  chapter-07.md  chapter-08.md  intro.md
part-4/: chapter-09.md  chapter-10.md  chapter-11.md  intro.md
part-5/: chapter-12.md  chapter-13.md  intro.md
part-6/: chapter-14.md  chapter-15.md  chapter-16.md  intro.md
part-7/: chapter-16.md  chapter-17.md  chapter-18.md  intro.md
scripts/: inject-frontmatter.py  iteration-prompts.md  workflow.md
(+166 files in other folders)
